Fix title on mobile page

--- a/src/scss/utils/_typography.css
+++ b/src/scss/utils/_typography.css
@@ -41,7 +41,7 @@
 }
 
 .heading-1 {
-    font-size: 6.3rem;
+    font-size: 5.8rem;
     font-weight: 800;
     letter-spacing: -.2rem;
 }
